# tawny

./: CLAUDE.md  Cargo.toml  JOURNAL.md  LICENSE  README.md
src/: CMakeLists.txt  emulator.rs  lib.rs  main.c  main.rs  peripherals.rs  systems.rs
src/app/: CMakeLists.txt  app.h
src/app/sdl2/: CMakeLists.txt  app.c
src/base/: CMakeLists.txt  arena.c  arena.h  byte_array.h  defines.h  file.c  file.h  str.c  str.h
src/components/: CMakeLists.txt  cpu6502.c  cpu6502.h  cpu6502_disasm.c  cpu6502_disasm.h  cpu6502_opcode_table.h
src/components/test/: CMakeLists.txt  cpu6502_functional_test.c
src/emulator/: clock.rs  component.rs  hd6845s.rs  mos6502.rs  r6522.rs  ram.rs  rom.rs  vidproc.rs
src/emulator/mos6502/: addr.rs  flags.rs  ops.rs  table.rs
src/math/: CMakeLists.txt  aabb2f.h  mat22f.h  mat23f.h  mat33f.h  mat34f.h  mat44f.c  mat44f.h  math.h  quat.h  rational.h  vec2f.h  vec2i.h  vec3f.h  vec4f.h
src/peripherals/: disk_drive.rs  keyboard.rs  speaker.rs  tv.rs
src/systems/: model_b.rs
src/templates/: CMakeLists.txt  array.h.template
src/test/: CMakeLists.txt  test.c  test.h
tests/: dormann.rs  irq_timing.rs
tests/dormann/: decimal.rs  functional.rs  interrupt.rs
